Minor fixes to small screen resolutions Improved information architecture on small screens

--- a/src/styles/small-screen/page-header/small-screen-page-header-navigation-menu.css
+++ b/src/styles/small-screen/page-header/small-screen-page-header-navigation-menu.css
@@ -11,9 +11,8 @@
 	display: flex;
 	align-items: center;
 	justify-content: space-between;
-	width: 90%;
+	width: 85%;
 	margin: 1rem;
-	gap: 3em;
 }
 
 .page-header__logo {
